# MLEOps

./: .gitignore  DH-2VitaCall.html  Dockerfile  README.md  deploy_pi.sh  docker-compose.yml  edge_asr.py  main.html  main.ipynb  pyproject.toml  render.yaml  requirements-deploy.txt  requirements.txt  run.ps1  serve.py  serve_web.py  start.py
.dvc/: config
api/: main.py
app/: asr.py  backend.py  icons.py  models.py  signals.py  ui.py  widgets.py
backend/: pyproject.toml
docs/: Opdrachtbeschrijving MLOps_2025.docx
electron/: index.html  package.json  vite.config.js
evidence/: 2026-05-07_merge_serve_ui.txt  2026-05-13_dehype_notebook.txt  2026-05-13_rubric_max_fix.txt  2026-05-29_ld3_asr_fix_result.md  2026-06-22_docker_boot_crash_diagnosis.md  2026-06-23_eisen-overzicht.html  2026-06-23_final-check.html  2026-06-23_gemeten-cijfers.html  2026-06-23_inlever-checklist.html  2026-06-23_naar-max-plan.html  2026-06-23_puntenberekening.html  alerts.jsonl  asr_eval.json  cloud_deploy.json  cv_scores.json  drift_report.json  edge_deploy.json  generate_ref_audio.py  hyperparameter_log.json  integration_audit.md  k8s_deployment.yaml  metrics.prom  metrics_log.csv  model_comparison.csv  model_per_class.json  monitoring_timeseries.json  prometheus.yml  scaling_benchmark.json  (+5 more)
python/: pyproject.toml
python/pipelines/bronze/: ingest_common_voice.py  ingest_imdb.py
python/pipelines/gold/: asr_features.py  sentiment_features.py
python/pipelines/silver/: clean_audio_metadata.py  clean_reviews.py
python/tests/: conftest.py  test_bronze.py  test_gold.py  test_silver.py
(+50 files in other folders)
